Profissao - Refatoracao do codigo